# Trainering

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: main.cpp
